--- a/assessment/css/base.css
+++ b/assessment/css/base.css
@@ -31,9 +31,18 @@ h1{
 h2{
   font-size: 20px;
   font-weight: 500;
+  color: var(--text-color);
   text-align: left;
   padding: 25px 0 25px 225px; /*Top, right, bottom, left */
-  color: var(--text-color);
+}
+
+h2.read-more-page{
+  padding: 0;
+  padding-top: 5%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 h3{
@@ -411,7 +420,7 @@ input[type="file"] {
 
 .new-image-container img {
   width: 100%; 
-  height: 60%; 
+  height: 80%; 
   padding: 1%;
   object-fit: cover;
   border-radius: 10px; 
@@ -426,7 +435,7 @@ input[type="file"] {
   color: white;
   text-align:left;
   font-weight: 600;
-  bottom: 45%;
+  bottom: 25%;
   padding-left: 0;
 }
 
@@ -480,7 +489,7 @@ Text overlay styles */
   position: absolute; /* Won't push other elements around or be affected by them for example the image underneath this text */
   top: 28%;
   width: auto;
-  margin-top: -22px;
+  margin-top: 28px;
   padding: 16px;
   color: var(--background-color);
   font-weight: bold;
@@ -912,7 +921,6 @@ Apply specific styles based on certain conditions*/
     font-size: 14px;
     margin: 10px 0;
     text-align: left;
-    padding: 15px 0 15px 50px; 
     margin-left: -20px
   }
 
